kubernetes/apps/main/flux-system/headlamp/app/httproute.yaml
---
# yaml-language-server: $schema=https://kube-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/app: headlamp
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/name: Headlamp
    gethomepage.dev/icon: headlamp.png
    gethomepage.dev/description: Kubernetes UI
  name: headlamp
spec:
  hostnames:
    - "headlamp.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: headlamp
          namespace: flux-system
          port: 80
